--- a/education/css/style.css
+++ b/education/css/style.css
@@ -77,8 +77,7 @@ body {
 
 .top-nav {
   font-family: 'Dosis', sans-serif;
-  padding-bottom: 0;
-  padding-top: 0;
+  padding: 4px 0;
 }
 
 .top-nav a {
@@ -89,69 +88,73 @@ body {
 }
 
 .top-nav a:hover {
+  color: white;
   background-color: #f05c5c;
   border-radius: 500px;
 }
 
-.icon-jiraf:hover {
-  background-color: inherit !important;
+.brand-logo {
+  width: 128px;
+  padding-left: 0 !important;
 }
 
-.icon-top-nav {
-  width: 48px;
-  height: 48px;
-  border-radius: 50%;
-  border: 0;
-  margin-top: 16px;
+.brand-logo:hover {
+  background-color: transparent !important;
 }
 
-.icon-top-nav:hover {
-  background-color: inherit !important;
-  color: #f05c5c;
-}
-
-.dropdown-profile,
-.dropdown-search {
-  border: 0;
+.navbar-collapse-abs {
   position: absolute;
-  right: 0;
+  z-index: 1000;
+  width: 50vw;
+  padding-left: 16px;
+  padding-bottom: 16px;
+  padding-right: 16px;
+  top: 60px;
+  right: -16px;
 }
 
-.dropdown-profile a,
-.dropdown-search a {
-  color: black;
+.nav-link {
+  padding: 2px 8px !important;
 }
 
-.dropdown-profile {
-  left: -134px;
+.nav-link-user, .nav-link-search {
+  display: none;
 }
 
-.dropdown-search {
-  left: -200px;
-  padding-left: 8px;
-  padding-right: 8px;
+.top-dropdown {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
-.dropdown-search input {
-  outline: 0;
+.dropdown-menu-user, .dropdown-menu-search {
+  position: static;
+  display: block;
+  background-color: #ffd338;
+  min-width: auto;
+  width: 100%;
   padding: 0;
+  border: 0;
 }
 
-.dropdown-search input:hover {
-  background-color: inherit;
+.dropdown-menu-user .dropdown-item, .dropdown-menu-search .dropdown-item {
+  color: white;
 }
 
-.dropdown-search input:active {
-  background-color: inherit;
-}
-
-.dropdown-search input:focus {
-  background-color: inherit;
+.dropdown-menu-user input, .dropdown-menu-search input {
+  width: 100%;
+  padding: 4px 8px;
+  border-radius: 10px;
+  border: 0;
 }
 
 .section {
-  padding-top: 104px;
-  padding-bottom: 100px;
+  padding-top: 48px;
+  padding-bottom: 48px;
 }
 
 .section-title, .section-title-sub {
@@ -161,15 +164,20 @@ body {
 }
 
 .section-title {
-  font-size: 30px;
+  font-size: 24px;
   text-shadow: 2px 2px 0 white;
   text-transform: uppercase;
 }
 
 .section-title-sub {
-  font-size: 24px;
+  font-size: 20px;
   color: white;
   letter-spacing: 3px;
+}
+
+.hero .section-title-sub {
+  margin-top: 16px;
+  margin-bottom: 16px;
 }
 
 .section-paragraph {
@@ -179,25 +187,99 @@ body {
 .dashed-line {
   border: 0;
   border-bottom: 4px dashed white;
-  margin: 46px auto;
+  margin: 24px auto;
+}
+
+.cloud-top, .cloud-bottom {
+  width: 100%;
+  height: auto;
+}
+
+.arrow {
+  position: absolute;
+  left: 50%;
+  bottom: 8px;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  width: 64px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.arrow .arrow-img-short, .arrow .arrow-img-long {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.arrow .arrow-img-short {
+  display: block;
+}
+
+.arrow .arrow-img-long {
+  display: none;
+}
+
+.arrow p {
+  color: #bbbbbb;
+  text-align: center;
+  margin-bottom: 0;
 }
 
 .banner {
-  background-image: url(../images/bg_cloud.png);
-  background-size: cover;
-  background-repeat: no-repeat;
+  position: relative;
+  height: 85vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .banner-title {
-  font-size: 48px;
+  font-size: 32px;
   font-weight: 700;
-  padding-top: 200px;
-  padding-bottom: 270px;
 }
 
-.hero-img {
-  background-image: url(https://picsum.photos/600/400);
+.banner-cloud-top {
+  background: url(../images/clouds_over.jpg) no-repeat bottom;
   background-size: cover;
+  height: 20%;
+}
+
+.banner-content {
+  -webkit-box-flex: 2;
+      -ms-flex-positive: 2;
+          flex-grow: 2;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.banner-cloud-bottom {
+  background: url(../images/banner_cloud_bottom.png) no-repeat bottom;
+  background-size: cover;
+  height: 20%;
+}
+
+.hero-img-container {
+  -webkit-box-ordinal-group: 0;
+      -ms-flex-order: -1;
+          order: -1;
+}
+
+.hero-img-container img {
   border-radius: 10px;
   -webkit-box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
           box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
@@ -205,10 +287,16 @@ body {
 
 .features {
   background: url(../images/feature-bg.jpg) repeat-x;
+  background-size: cover;
 }
 
 .feature {
   text-align: center;
+  margin-bottom: 16px;
+}
+
+.feature .section-title-sub {
+  font-size: 16px;
 }
 
 .course {
@@ -216,6 +304,7 @@ body {
   border-radius: 16px;
   text-align: center;
   background-color: white;
+  margin-bottom: 30px;
 }
 
 .icon-course {
@@ -252,6 +341,7 @@ body {
 
 .course-body {
   position: relative;
+  padding: 20px 15px;
 }
 
 .course-badge {
@@ -305,15 +395,15 @@ body {
 
 .info-numbers {
   position: relative;
-  padding-top: 48px;
-  padding-bottom: 32px;
+  padding-top: 22px;
+  padding-bottom: 12px;
 }
 
 .info-numbers h2 {
   top: 0;
   left: 0;
   right: 0;
-  font-size: 60px;
+  font-size: 36px;
   font-weight: 700;
   color: white;
   position: absolute;
@@ -323,14 +413,24 @@ body {
   background-color: #6e6e6e;
 }
 
+.course-icon {
+  width: 20px;
+  height: 20px;
+  fill: white;
+}
+
 .sp-btn {
   font-family: 'Dosis', sans-serif;
-  font-size: 24px;
+  font-size: 20px;
   font-weight: 700;
   background-image: url(../images/bt_artwork.png);
-  width: 248px;
-  height: 94px;
-  padding-top: 26px;
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 144px;
+  height: 54px;
+  padding-top: 10px;
+  display: block;
+  margin: auto;
 }
 
 .memorable {
@@ -381,22 +481,35 @@ body {
 
 .circle-card {
   position: relative;
-  width: 118px;
+  width: 64px;
+  height: 64px;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
 }
 
 .circle-card .circle-card-img {
-  top: 6px;
-  left: 6px;
-  width: 100px;
-  height: 100px;
+  top: 0;
+  left: 0;
+  width: 93%;
+  height: 93%;
   border-radius: 100%;
   position: absolute;
+  -webkit-box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.1);
+          box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.1);
+}
+
+.circle-card .circle-card-img img {
+  margin: 0;
+  border-radius: 100%;
+  width: 100%;
+  height: auto;
 }
 
 .circle-card .circle-card-body {
   position: absolute;
+  width: 93%;
   text-align: center;
-  top: 0;
+  top: 4px;
   left: 0;
   right: 0;
 }
@@ -407,9 +520,9 @@ body {
 }
 
 .circle-card .circle-card-text-primary {
-  font-size: 48px;
+  font-size: 24px;
   font-weight: 700;
-  margin-top: 18px;
+  margin-top: 4px;
 }
 
 .circle-card .circle-card-text-secondary {
@@ -418,28 +531,60 @@ body {
   margin: 0;
 }
 
-.events .section-title,
-.events .section-title-sub {
-  text-align: left;
+.section.events {
+  padding-bottom: 8px;
 }
 
 .events .dashed-line {
-  margin-left: 0;
+  margin: 32px auto;
 }
 
-.event-details p, .event-details .timing {
+.event .event-details .details, .event .event-details .timing, .event-news .event-details .details, .event-news .event-details .timing {
   font-family: 'Lato', sans-serif;
   font-size: 14px;
 }
 
-.event-details .timing {
+.event .event-details .timing, .event-news .event-details .timing {
   font-weight: 400;
   letter-spacing: 2px;
   text-transform: uppercase;
+  margin-bottom: 0;
 }
 
-.event-details .details {
+.event .event-details .details, .event-news .event-details .details {
   font-weight: 300;
+}
+
+.event, .event-news {
+  margin-bottom: 32px;
+}
+
+.event .event-details {
+  margin-left: 12px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+
+.event .details {
+  margin-bottom: 4px;
+}
+
+.event .section-title-sub {
+  text-align: left;
+}
+
+.news {
+  margin-top: 48px;
+}
+
+.event-news .details {
+  margin-bottom: 0;
+}
+
+.event-news .section-title-sub {
+  text-align: left;
+  margin-top: 4px;
 }
 
 .register-event-link {
@@ -457,23 +602,28 @@ body {
   border-right: 0;
   border-bottom-width: 4px;
   border-bottom-style: dotted;
+  margin: 4px auto;
 }
 
 .nav-bottom {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   padding-top: 28px;
   padding-bottom: 28px;
   margin-bottom: 0;
   font-weight: 700;
-  font-size: 18px;
+  font-size: 16px;
   color: white;
   text-transform: uppercase;
 }
 
+.nav-bottom ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
 .nav-bottom li {
-  margin-right: 16px;
+  margin-right: 8px;
+  display: inline-block;
 }
 
 .nav-bottom a {
@@ -497,6 +647,36 @@ body {
 .contacts .section-title-sub {
   margin-top: 20px;
   text-align: left;
+}
+
+.contacts .contact h1, .contacts .contact p, .contacts .contact li, .contacts .contact .input-group, .contacts .contact .socials {
+  text-align: center;
+}
+
+.contacts .contact .input-group {
+  display: table;
+}
+
+.contacts .contact .input-group div {
+  display: inline-block;
+  border: 1px solid gray;
+  border-radius: 3px;
+  padding: 0;
+}
+
+.contacts .contact .input-group input, .contacts .contact .input-group button {
+  border: 0;
+  padding: 2px 4px;
+  background-color: transparent;
+}
+
+.contacts .contact hr, .contacts .contact img {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.contacts .contact img {
+  display: block;
 }
 
 .contacts-cloud-edge {
@@ -524,5 +704,206 @@ body {
 
 .socials {
   margin-top: 32px;
+}
+
+@media (min-width: 576px) {
+  .contacts .contact h1, .contacts .contact p, .contacts .contact li, .contacts .contact .input-group, .contacts .contact .socials {
+    text-align: left;
+  }
+  .contacts .contact .input-group {
+    display: table;
+  }
+  .contacts .contact hr, .contacts .contact img {
+    margin-left: 0;
+  }
+  .contacts .contact img {
+    display: block;
+  }
+  .features {
+    background-size: contain;
+  }
+  .event-news .event-details {
+    padding-left: 0;
+  }
+  .event-news .section-title-sub {
+    margin-top: 0;
+  }
+}
+
+@media (min-width: 768px) {
+  .navbar-collapse-abs {
+    position: static;
+    padding-left: 0;
+    padding-bottom: 0;
+    padding-right: 0;
+  }
+  .nav-link-user, .nav-link-search {
+    display: block;
+    border-radius: 100%;
+    width: 36px;
+    height: 36px;
+    margin-left: 6px;
+  }
+  .top-dropdown {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .top-dropdown .dropdown a {
+    display: block;
+  }
+  .dropdown-menu-user, .dropdown-menu-search {
+    position: absolute;
+    width: 200px;
+    top: 50px;
+    left: auto;
+    right: 0;
+    padding: 8px;
+    display: none;
+  }
+  .hero .section-title-sub {
+    margin-top: 0;
+  }
+  .feature .section-title-sub {
+    font-size: 24px;
+  }
+  .circle-card {
+    width: 118px;
+    height: 118px;
+  }
+  .circle-card .circle-card-body {
+    top: 0;
+    left: 0;
+    right: 0;
+  }
+  .circle-card .circle-card-text-primary {
+    font-size: 48px;
+    margin-top: 18px;
+  }
+  .circle-card .circle-card-text-secondary {
+    font-size: 18px;
+    margin: 0;
+  }
+  .hero-img-container {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+  }
+  .info-numbers {
+    padding-top: 48px;
+    padding-bottom: 32px;
+  }
+  .info-numbers h2 {
+    font-size: 60px;
+  }
+  /* .event-news {
+        margin-bottom: 32px;
+    } */
+}
+
+@media (min-width: 992px) {
+  .top-nav {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+  .brand-logo {
+    width: 200px;
+  }
+  .nav-link {
+    padding: 2px 16px !important;
+  }
+  .dropdown-menu-user, .dropdown-menu-search {
+    top: 70px;
+  }
+  .banner-cloud-bottom {
+    height: 28%;
+  }
+  .arrow .arrow-img-short {
+    display: none;
+  }
+  .arrow .arrow-img-long {
+    display: block;
+  }
+  .section {
+    padding-top: 104px;
+    padding-bottom: 100px;
+  }
+  .section-title {
+    font-size: 30px;
+  }
+  .section-title-sub {
+    font-size: 24px;
+  }
+  .banner-title {
+    font-size: 48px;
+  }
+  .nav-bottom {
+    font-size: 18px;
+  }
+  .sp-btn {
+    font-size: 24px;
+    width: 248px;
+    height: 94px;
+    padding-top: 26px;
+  }
+  .events .section-title {
+    text-align: left;
+  }
+  .events .dashed-line {
+    margin-left: 0;
+  }
+  .news {
+    margin-top: 0;
+  }
+  .dashed-line {
+    margin: 46px auto;
+  }
+  .teacher-content hr {
+    margin: 16px auto;
+  }
+}
+
+@media (min-width: 1200px) {
+  body {
+    background-color: 1px solid yellow;
+  }
+  .container-fluid {
+    max-width: 1200px;
+  }
+}
+
+.memory-thumb {
+  margin-bottom: 32px;
+}
+
+.teacher {
+  margin-bottom: 32px;
+}
+
+.teacher-content {
+  padding-left: 0;
+}
+
+.teacher-content hr {
+  margin: 4px auto;
+}
+
+.teacher-sm-show {
+  display: block;
+  margin-top: 12px;
+}
+
+.teacher-sm-hide {
+  display: none;
+}
+
+@media (min-width: 450px) {
+  .teacher-sm-show {
+    display: none;
+  }
+  .teacher-sm-hide {
+    display: block;
+  }
 }
 /*# sourceMappingURL=style.css.map */
