swimming image optimized and responsive fix

--- a/swimming/index.pug
+++ b/swimming/index.pug
@@ -25,10 +25,10 @@ html(lang="en")
                             img(class="d-block img-fluid" src="./images/slider-img-1.jpg" alt="Third slide")
 
                     a(class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev")
-                        span(class="carousel-control-prev-icon" aria-hidden="true" style="margin-top: -220px")
+                        span(class="carousel-control-prev-icon" aria-hidden="true")
                             span(class="sr-only") Previous
                     a(class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next")
-                        span(class="carousel-control-next-icon" aria-hidden="true" style="margin-top: -220px")
+                        span(class="carousel-control-next-icon" aria-hidden="true")
                             span(class="sr-only") Next
                             
             //- Main navigation
@@ -40,11 +40,11 @@ html(lang="en")
                                 img.img-fluid(src="./images/logo.png", alt="logo")
                             span.logo-name Swimming<br>School
                             
-                        button.navbar-toggler(type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation")
+                        button.navbar-toggler.mt-1(type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation")
                             span
                                 img(src="./images/menu.svg", alt="menu-button", style="width: 36px")
                         //- 
-                        div.collapse.navbar-collapse.mobile-link-collapse(id="navbarNavAltMarkup")
+                        div.collapse.navbar-collapse.mobile-link-collapse.pt-4(id="navbarNavAltMarkup")
                             a.nav-item.nav-link.active.mobile-link(href="#") Home
                             a.nav-item.nav-link.active.mobile-link(href="#") About
                             a.nav-item.nav-link.active.mobile-link(href="#") Feature
