--- a/swimming/css/style.css
+++ b/swimming/css/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   background-color: #f0f2f1;
   color: #5f5f62;
 }
@@ -94,7 +94,6 @@ section, footer {
 .box {
   position: relative;
   padding: 15px;
-  margin-bottom: 15px;
 }
 
 .box-label {
@@ -104,7 +103,6 @@ section, footer {
   width: 56px;
   height: 56px;
 }
-
 .box-label .number {
   text-align: center;
   font-weight: 700;
@@ -113,12 +111,10 @@ section, footer {
 .box-content {
   padding-top: 16px;
 }
-
 .box-content .title {
   font-size: 28px;
   margin-bottom: 16px;
 }
-
 .box-content .body {
   font-size: 16px;
 }
@@ -132,7 +128,7 @@ section, footer {
 }
 
 .bt-more {
-  padding: 20px;
+  padding: 10px;
 }
 
 .special-bg {
@@ -148,11 +144,9 @@ section, footer {
   padding-right: 0;
   padding-bottom: 16px;
 }
-
 .post-readmore .title {
   margin-bottom: 18px;
 }
-
 .post-readmore .bt-more {
   margin-top: 18px;
 }
@@ -188,18 +182,25 @@ section, footer {
     margin-top: 70px;
     margin-bottom: 50px;
   }
+
+  .bt-more {
+    padding: 20px;
+  }
+
   .welcome .title, .post-readmore .title, .contact-info .title {
     margin-top: 0;
     font-size: 30px;
   }
+
   .welcome {
     margin-top: 350px;
   }
+
   .mobile-link-collapse {
     display: none !important;
-    -webkit-transform: scaleY(0);
-            transform: scaleY(0);
+    transform: scaleY(0);
   }
+
   .main-nav {
     top: 48px;
     overflow: hidden;
@@ -213,39 +214,27 @@ section, footer {
   .main-nav .navbar-brand {
     margin-left: 0;
   }
+
   .main-nav-link {
     position: relative;
-    font-family: 'Raleway', sans-serif;
+    font-family: "Raleway", sans-serif;
     color: transparent !important;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    align-items: center;
     padding-left: 18px !important;
     padding-right: 18px !important;
-    -webkit-transition: background-color 250ms ease-in;
     transition: background-color 250ms ease-in;
-    -webkit-transition-delay: 250ms;
-            transition-delay: 250ms;
+    transition-delay: 250ms;
   }
   .main-nav-link .normal-state, .main-nav-link .hover-state {
     position: absolute;
     left: 0;
-    display: -webkit-inline-box;
-    display: -ms-inline-flexbox;
     display: inline-flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    align-items: center;
+    justify-content: center;
     color: #000 !important;
     width: 100%;
     height: 100%;
-    -webkit-transition: top 250ms ease-in;
     transition: top 250ms ease-in;
   }
   .main-nav-link:hover {
@@ -266,10 +255,8 @@ section, footer {
     height: 8px;
     left: 0;
     bottom: -8px;
-    -webkit-transition: all 250ms ease-in;
     transition: all 250ms ease-in;
-    -webkit-transition-delay: 250ms;
-            transition-delay: 250ms;
+    transition-delay: 250ms;
   }
   .main-nav-link:hover .normal-state {
     top: -60%;
@@ -280,75 +267,91 @@ section, footer {
   .main-nav-link:hover .hover-state::after {
     bottom: 0;
   }
+
   .steps-section-abs {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
   }
+
   .box-container {
     position: relative;
   }
+
   .box {
     position: absolute;
     width: 45%;
     padding: 16px;
     min-height: 300px;
   }
+
   .box-1 {
     top: 280px;
     right: 0;
   }
+
   .box-2 {
     top: 500px;
     left: 0;
   }
+
   .box-3 {
     top: 700px;
     right: 0;
   }
+
   .bg-1 {
     background-image: url(../images/special-bg-1.png);
   }
+
   .bg-2 {
     background-image: url(../images/special-bg-2.png);
   }
+
   .padd-l-for-bg {
     padding-right: 0;
     padding-left: 48px;
   }
 }
-
 @media (min-width: 992px) {
   .logo-img img {
     width: 76px;
   }
+
   .logo-name {
     margin-left: 16px;
     font-size: 22px;
   }
+
   .welcome {
     margin-top: 500px;
   }
+
   .slider-wrapper {
     height: 670px;
   }
+
   .box {
     width: 40%;
     padding: 32px;
   }
+
   .box-1 {
     top: 300px;
     right: 0;
   }
+
   .box-2 {
     top: 600px;
     left: 0;
   }
+
   .box-3 {
     top: 880px;
     right: 0;
   }
+
   .box-content {
     padding-top: 32px;
   }
@@ -359,20 +362,25 @@ section, footer {
   .box-content .body {
     font-size: 18px;
   }
+
   section, footer {
     margin-top: 120px;
     margin-bottom: 100px;
   }
+
   .welcome .title, .post-readmore .title {
     font-size: 40px;
   }
+
   .post-readmore {
     padding-left: 0;
     padding-right: 48px;
   }
+
   .padd-l-for-bg {
     padding-right: 0;
     padding-left: 48px;
   }
 }
+
 /*# sourceMappingURL=style.css.map */
