--- a/swimming/css/style.sass
+++ b/swimming/css/style.sass
@@ -70,7 +70,6 @@ section, footer
 .box
     position: relative
     padding: 15px
-    margin-bottom: 15px
 
 .box-label
     border-radius: 50%
@@ -98,7 +97,7 @@ section, footer
     border: 1px gray
     display: inline-block
 .bt-more
-    padding: 20px
+    padding: 10px
 .special-bg
     background-position: center
     background-repeat: no-repeat
@@ -134,6 +133,8 @@ section, footer
     section, footer
         margin-top: 70px
         margin-bottom: 50px
+    .bt-more
+        padding: 20px
     .welcome, .post-readmore, .contact-info
         .title
             margin-top: 0
